parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON BLOCK
Rule 2     neural_program_id -> EMPTY
Rule 3     BLOCK -> VAR_BLOCK PROC_BLOCK PRINCIPAL_BLOCK
Rule 4     VAR_BLOCK -> VARS_K BLOCKSTART VAR_DECL BLOCKEND
Rule 5     VAR_DECL -> TYPE COLON VAR_LIST SEMICOLON VAR_DECL_R
Rule 6     VAR_DECL_R -> VAR_DECL
Rule 7     VAR_DECL_R -> EMPTY
Rule 8     VAR_LIST -> ID VAR_LIST2
Rule 9     VAR_LIST2 -> COMMA ID VAR_LIST2
Rule 10    VAR_LIST2 -> EMPTY
Rule 11    TYPE -> INT_K NEURAL_TYPE
Rule 12    TYPE -> FLOAT_K NEURAL_TYPE
Rule 13    TYPE -> STRING_K NEURAL_TYPE
Rule 14    NEURAL_TYPE -> EMPTY
Rule 15    PROC_BLOCK -> PROC_DECL
Rule 16    PROC_DECL -> PROC_DECL_RETURN
Rule 17    PROC_DECL -> PROC_DECL_VOID
Rule 18    PROC_DECL -> EMPTY
Rule 19    PROC_DECL_VOID -> FUNCTION_K VOID_K ID neural_proc_void_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY BLOCKEND POST_FUNC PROC_DECL
Rule 20    neural_proc_void_id -> EMPTY
Rule 21    PROC_DECL_RETURN -> FUNCTION_K TYPE ID neural_proc_return_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY RETURN BLOCKEND POST_FUNC PROC_DECL
Rule 22    POST_FUNC -> EMPTY
Rule 23    neural_proc_return_id -> EMPTY
Rule 24    neural_param_decl -> EMPTY
Rule 25    PARAM_DECL -> TYPE ID neuro PARAM_DECL_R
Rule 26    PARAM_DECL -> EMPTY
Rule 27    neuro -> EMPTY
Rule 28    PARAM_DECL_R -> COMMA PARAM_DECL
Rule 29    PARAM_DECL_R -> EMPTY
Rule 30    PROC_BODY -> STATEMENT PROC_BODY_R
Rule 31    FN_VARBLOCK -> VARS_K BLOCKSTART LS_VARDECL BLOCKEND
Rule 32    LS_VARDECL -> TYPE COLON FNVAR_LS SEMICOLON LS_VARDECL_R
Rule 33    LS_VARDECL_R -> LS_VARDECL
Rule 34    LS_VARDECL_R -> EMPTY
Rule 35    FNVAR_LS -> ID FNVAR_LS2
Rule 36    FNVAR_LS2 -> COMMA ID FNVAR_LS2
Rule 37    FNVAR_LS2 -> EMPTY
Rule 38    PROC_BODY_R -> PROC_BODY
Rule 39    PROC_BODY_R -> EMPTY
Rule 40    STATEMENT -> ASSIGN SEMICOLON
Rule 41    STATEMENT -> FUNC_CALL SEMICOLON
Rule 42    STATEMENT -> READ SEMICOLON
Rule 43    STATEMENT -> WRITE SEMICOLON
Rule 44    STATEMENT -> FLOW
Rule 45    STATEMENT_R -> STATEMENT STATEMENT_R
Rule 46    STATEMENT_R -> EMPTY
Rule 47    FLOW -> DECISION
Rule 48    FLOW -> LOOP
Rule 49    LOOP -> WHILE_LOOP
Rule 50    LOOP -> DO_WHILE_LOOP SEMICOLON
Rule 51    LOOP -> FOR_LOOP
Rule 52    DO_WHILE_LOOP -> DO_K DW_PREV_NEURAL BLOCKSTART STATEMENT_R BLOCKEND WHILE_K LPAREN H_EXPRESSION RPAREN DW_END_NEURAL
Rule 53    DW_PREV_NEURAL -> EMPTY
Rule 54    DW_END_NEURAL -> EMPTY
Rule 55    WHILE_LOOP -> WHILE_K WHILE_PREV_NEURAL LPAREN H_EXPRESSION RPAREN WHILE_POST_NEURAL BLOCKSTART STATEMENT_R BLOCKEND WHILE_END_NEURAL
Rule 56    WHILE_PREV_NEURAL -> EMPTY
Rule 57    WHILE_POST_NEURAL -> EMPTY
Rule 58    WHILE_END_NEURAL -> EMPTY
Rule 59    FOR_LOOP -> FOR_K ID EQUALS INT TO_K INT DO_K BLOCKSTART STATEMENT_R BLOCKEND
Rule 60    DECISION -> IF_K LPAREN H_EXPRESSION RPAREN EXP_RESULT_NEURAL BLOCKSTART STATEMENT_R BLOCKEND DECISION_ALT DECISION_END_NEURAL
Rule 61    EXP_RESULT_NEURAL -> EMPTY
Rule 62    DECISION_END_NEURAL -> EMPTY
Rule 63    DECISION_ALT -> ELSE
Rule 64    DECISION_ALT -> EMPTY
Rule 65    ELSE -> ELSE_NEURAL ELSE_K BLOCKSTART STATEMENT_R BLOCKEND
Rule 66    ELSE_NEURAL -> EMPTY
Rule 67    ASSIGN -> VAR ASSIGN_VAR_N EQUALS EQUALS_NEURAL H_EXPRESSION ASSI_H_EXP_NEURAL
Rule 68    ASSI_H_EXP_NEURAL -> EMPTY
Rule 69    EQUALS_NEURAL -> EMPTY
Rule 70    ASSIGN_VAR_N -> EMPTY
Rule 71    VAR -> ID
Rule 72    VAR -> ARRAY
Rule 73    ARRAY -> ID LBRACE INT RBRACE
Rule 74    FUNC_CALL -> ID PRE_VERIFY LPAREN EXP_LIST POST_VERIFY RPAREN
Rule 75    POST_VERIFY -> EMPTY
Rule 76    PRE_VERIFY -> EMPTY
Rule 77    EXP_LIST -> H_EXPRESSION EXP_NEURAL EXP_LIST_2
Rule 78    EXP_NEURAL -> EMPTY
Rule 79    EXP_LIST_2 -> COMMA EXP_LIST
Rule 80    EXP_LIST_2 -> EMPTY
Rule 81    CONSTANT -> INT
Rule 82    CONSTANT -> FLOAT
Rule 83    CONSTANT -> STRING
Rule 84    READ -> READ_K LPAREN ID_LIST RPAREN
Rule 85    ID_LIST -> ID READ_NEURAL ID_LIST_R
Rule 86    READ_NEURAL -> EMPTY
Rule 87    ID_LIST_R -> COMMA ID_LIST
Rule 88    ID_LIST_R -> EMPTY
Rule 89    WRITE -> WRITE_K LPAREN WRITE_LIST RPAREN
Rule 90    WRITE_LIST -> H_EXPRESSION WRITE_LIST_R
Rule 91    WRITE_LIST -> CONSTANT CONSTANT_WRITE_N WRITE_LIST_R
Rule 92    CONSTANT_WRITE_N -> EMPTY
Rule 93    WRITE_LIST_R -> WRITE_NEURAL COMMA WRITE_LIST
Rule 94    WRITE_LIST_R -> WRITE_NEURAL EMPTY
Rule 95    WRITE_NEURAL -> EMPTY
Rule 96    RETURN -> RETURN_K LPAREN H_EXPRESSION RPAREN SEMICOLON
Rule 97    EXPRESSION -> TERM NEURAL_EXPRESSION EXPRESSION_R
Rule 98    NEURAL_EXPRESSION -> EMPTY
Rule 99    EXPRESSION_R -> PLUS NEURAL_PLUS EXPRESSION
Rule 100   EXPRESSION_R -> MINUS NEURAL_MINUS EXPRESSION
Rule 101   EXPRESSION_R -> EMPTY
Rule 102   NEURAL_PLUS -> EMPTY
Rule 103   NEURAL_MINUS -> EMPTY
Rule 104   TERM -> FACTOR NEURAL_TERM TERM_R
Rule 105   NEURAL_TERM -> EMPTY
Rule 106   TERM_R -> TIMES NEURAL_TIMES TERM
Rule 107   TERM_R -> DIVIDE NEURAL_DIVIDE TERM
Rule 108   TERM_R -> EMPTY
Rule 109   NEURAL_TIMES -> EMPTY
Rule 110   NEURAL_DIVIDE -> EMPTY
Rule 111   FACTOR -> ID NEURAL_ID_FAC
Rule 112   FACTOR -> CONSTANT NEURAL_CNT_FACT
Rule 113   FACTOR -> LPAREN H_EXPRESSION RPAREN
Rule 114   NEURAL_ID_FAC -> EMPTY
Rule 115   NEURAL_CNT_FACT -> EMPTY
Rule 116   S_EXPRESSION -> EXPRESSION
Rule 117   S_EXPRESSION -> EXPRESSION GT EXPRESSION
Rule 118   S_EXPRESSION -> EXPRESSION LT EXPRESSION
Rule 119   S_EXPRESSION -> EXPRESSION GTE EXPRESSION
Rule 120   S_EXPRESSION -> EXPRESSION LTE EXPRESSION
Rule 121   S_EXPRESSION -> EXPRESSION DOUBLEEQUAL EXPRESSION
Rule 122   H_EXPRESSION -> S_EXPRESSION H_EXPRESSION_R
Rule 123   H_EXPRESSION_R -> OR H_EXPRESSION
Rule 124   H_EXPRESSION_R -> AND H_EXPRESSION
Rule 125   H_EXPRESSION_R -> EMPTY
Rule 126   PRINCIPAL_BLOCK -> MAIN_K MAIN_NEURAL LPAREN RPAREN BLOCKSTART PRINCIPAL_BODY BLOCKEND
Rule 127   MAIN_NEURAL -> EMPTY
Rule 128   PRINCIPAL_BODY -> STATEMENT PRINCIPAL_BODY_R
Rule 129   PRINCIPAL_BODY -> EMPTY
Rule 130   PRINCIPAL_BODY_R -> PRINCIPAL_BODY
Rule 131   EMPTY -> <empty>

Terminals, with rules where they appear

AND                  : 124
BLOCKEND             : 4 19 21 31 52 55 59 60 65 126
BLOCKSTART           : 4 19 21 31 52 55 59 60 65 126
COLON                : 5 32
COMMA                : 9 28 36 79 87 93
COMMENT              : 
DIVIDE               : 107
DOUBLEEQUAL          : 121
DO_K                 : 52 59
ELSE_K               : 65
EQUALS               : 59 67
FLOAT                : 82
FLOAT_K              : 12
FOR_K                : 59
FUNCTION_K           : 19 21
GT                   : 117
GTE                  : 119
ID                   : 1 8 9 19 21 25 35 36 59 71 73 74 85 111
IF_K                 : 60
INT                  : 59 59 73 81
INT_K                : 11
LBRACE               : 73
LPAREN               : 19 21 52 55 60 74 84 89 96 113 126
LT                   : 118
LTE                  : 120
MAIN_K               : 126
MINUS                : 100
OR                   : 123
PLUS                 : 99
PROGRAM_K            : 1
RBRACE               : 73
READ_K               : 84
RETURN_K             : 96
RPAREN               : 19 21 52 55 60 74 84 89 96 113 126
SEMICOLON            : 1 5 32 40 41 42 43 50 96
STRING               : 83
STRING_K             : 13
TIMES                : 106
TO_K                 : 59
VARS_K               : 4 31
VOID_K               : 19
WHILE_K              : 52 55
WRITE_K              : 89
error                : 

Nonterminals, with rules where they appear

ARRAY                : 72
ASSIGN               : 40
ASSIGN_VAR_N         : 67
ASSI_H_EXP_NEURAL    : 67
BLOCK                : 1
CONSTANT             : 91 112
CONSTANT_WRITE_N     : 91
DECISION             : 47
DECISION_ALT         : 60
DECISION_END_NEURAL  : 60
DO_WHILE_LOOP        : 50
DW_END_NEURAL        : 52
DW_PREV_NEURAL       : 52
ELSE                 : 63
ELSE_NEURAL          : 65
EMPTY                : 2 7 10 14 18 20 22 23 24 26 27 29 34 37 39 46 53 54 56 57 58 61 62 64 66 68 69 70 75 76 78 80 86 88 92 94 95 98 101 102 103 105 108 109 110 114 115 125 127 129
EQUALS_NEURAL        : 67
EXPRESSION           : 99 100 116 117 117 118 118 119 119 120 120 121 121
EXPRESSION_R         : 97
EXP_LIST             : 74 79
EXP_LIST_2           : 77
EXP_NEURAL           : 77
EXP_RESULT_NEURAL    : 60
FACTOR               : 104
FLOW                 : 44
FNVAR_LS             : 32
FNVAR_LS2            : 35 36
FN_VARBLOCK          : 19 21
FOR_LOOP             : 51
FUNC_CALL            : 41
H_EXPRESSION         : 52 55 60 67 77 90 96 113 123 124
H_EXPRESSION_R       : 122
ID_LIST              : 84 87
ID_LIST_R            : 85
LOOP                 : 48
LS_VARDECL           : 31 33
LS_VARDECL_R         : 32
MAIN_NEURAL          : 126
NEURAL_CNT_FACT      : 112
NEURAL_DIVIDE        : 107
NEURAL_EXPRESSION    : 97
NEURAL_ID_FAC        : 111
NEURAL_MINUS         : 100
NEURAL_PLUS          : 99
NEURAL_TERM          : 104
NEURAL_TIMES         : 106
NEURAL_TYPE          : 11 12 13
PARAM_DECL           : 19 21 28
PARAM_DECL_R         : 25
POST_FUNC            : 19 21
POST_VERIFY          : 74
PRE_VERIFY           : 74
PRINCIPAL_BLOCK      : 3
PRINCIPAL_BODY       : 126 130
PRINCIPAL_BODY_R     : 128
PROC_BLOCK           : 3
PROC_BODY            : 19 21 38
PROC_BODY_R          : 30
PROC_DECL            : 15 19 21
PROC_DECL_RETURN     : 16
PROC_DECL_VOID       : 17
PROGRAM              : 0
READ                 : 42
READ_NEURAL          : 85
RETURN               : 21
STATEMENT            : 30 45 128
STATEMENT_R          : 45 52 55 59 60 65
S_EXPRESSION         : 122
TERM                 : 97 106 107
TERM_R               : 104
TYPE                 : 5 21 25 32
VAR                  : 67
VAR_BLOCK            : 3
VAR_DECL             : 4 6
VAR_DECL_R           : 5
VAR_LIST             : 5
VAR_LIST2            : 8 9
WHILE_END_NEURAL     : 55
WHILE_LOOP           : 49
WHILE_POST_NEURAL    : 55
WHILE_PREV_NEURAL    : 55
WRITE                : 43
WRITE_LIST           : 89 93
WRITE_LIST_R         : 90 91
WRITE_NEURAL         : 93 94
neural_param_decl    : 19 21
neural_proc_return_id : 21
neural_proc_void_id  : 19
neural_program_id    : 1
neuro                : 25

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . PROGRAM_K ID neural_program_id SEMICOLON BLOCK

    PROGRAM_K       shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> PROGRAM_K . ID neural_program_id SEMICOLON BLOCK

    ID              shift and go to state 3


state 3

    (1) PROGRAM -> PROGRAM_K ID . neural_program_id SEMICOLON BLOCK
    (2) neural_program_id -> . EMPTY
    (131) EMPTY -> .

    SEMICOLON       reduce using rule 131 (EMPTY -> .)

    neural_program_id              shift and go to state 4
    EMPTY                          shift and go to state 5

state 4

    (1) PROGRAM -> PROGRAM_K ID neural_program_id . SEMICOLON BLOCK

    SEMICOLON       shift and go to state 6


state 5

    (2) neural_program_id -> EMPTY .

    SEMICOLON       reduce using rule 2 (neural_program_id -> EMPTY .)


state 6

    (1) PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON . BLOCK
    (3) BLOCK -> . VAR_BLOCK PROC_BLOCK PRINCIPAL_BLOCK
    (4) VAR_BLOCK -> . VARS_K BLOCKSTART VAR_DECL BLOCKEND

    VARS_K          shift and go to state 9

    BLOCK                          shift and go to state 7
    VAR_BLOCK                      shift and go to state 8

state 7

    (1) PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON BLOCK .

    $end            reduce using rule 1 (PROGRAM -> PROGRAM_K ID neural_program_id SEMICOLON BLOCK .)


state 8

    (3) BLOCK -> VAR_BLOCK . PROC_BLOCK PRINCIPAL_BLOCK
    (15) PROC_BLOCK -> . PROC_DECL
    (16) PROC_DECL -> . PROC_DECL_RETURN
    (17) PROC_DECL -> . PROC_DECL_VOID
    (18) PROC_DECL -> . EMPTY
    (21) PROC_DECL_RETURN -> . FUNCTION_K TYPE ID neural_proc_return_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY RETURN BLOCKEND POST_FUNC PROC_DECL
    (19) PROC_DECL_VOID -> . FUNCTION_K VOID_K ID neural_proc_void_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY BLOCKEND POST_FUNC PROC_DECL
    (131) EMPTY -> .

    FUNCTION_K      shift and go to state 15
    MAIN_K          reduce using rule 131 (EMPTY -> .)

    PROC_BLOCK                     shift and go to state 10
    PROC_DECL                      shift and go to state 11
    PROC_DECL_RETURN               shift and go to state 12
    PROC_DECL_VOID                 shift and go to state 13
    EMPTY                          shift and go to state 14

state 9

    (4) VAR_BLOCK -> VARS_K . BLOCKSTART VAR_DECL BLOCKEND

    BLOCKSTART      shift and go to state 16


state 10

    (3) BLOCK -> VAR_BLOCK PROC_BLOCK . PRINCIPAL_BLOCK
    (126) PRINCIPAL_BLOCK -> . MAIN_K MAIN_NEURAL LPAREN RPAREN BLOCKSTART PRINCIPAL_BODY BLOCKEND

    MAIN_K          shift and go to state 18

    PRINCIPAL_BLOCK                shift and go to state 17

state 11

    (15) PROC_BLOCK -> PROC_DECL .

    MAIN_K          reduce using rule 15 (PROC_BLOCK -> PROC_DECL .)


state 12

    (16) PROC_DECL -> PROC_DECL_RETURN .

    MAIN_K          reduce using rule 16 (PROC_DECL -> PROC_DECL_RETURN .)


state 13

    (17) PROC_DECL -> PROC_DECL_VOID .

    MAIN_K          reduce using rule 17 (PROC_DECL -> PROC_DECL_VOID .)


state 14

    (18) PROC_DECL -> EMPTY .

    MAIN_K          reduce using rule 18 (PROC_DECL -> EMPTY .)


state 15

    (21) PROC_DECL_RETURN -> FUNCTION_K . TYPE ID neural_proc_return_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY RETURN BLOCKEND POST_FUNC PROC_DECL
    (19) PROC_DECL_VOID -> FUNCTION_K . VOID_K ID neural_proc_void_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY BLOCKEND POST_FUNC PROC_DECL
    (11) TYPE -> . INT_K NEURAL_TYPE
    (12) TYPE -> . FLOAT_K NEURAL_TYPE
    (13) TYPE -> . STRING_K NEURAL_TYPE

    VOID_K          shift and go to state 20
    INT_K           shift and go to state 21
    FLOAT_K         shift and go to state 22
    STRING_K        shift and go to state 23

    TYPE                           shift and go to state 19

state 16

    (4) VAR_BLOCK -> VARS_K BLOCKSTART . VAR_DECL BLOCKEND
    (5) VAR_DECL -> . TYPE COLON VAR_LIST SEMICOLON VAR_DECL_R
    (11) TYPE -> . INT_K NEURAL_TYPE
    (12) TYPE -> . FLOAT_K NEURAL_TYPE
    (13) TYPE -> . STRING_K NEURAL_TYPE

    INT_K           shift and go to state 21
    FLOAT_K         shift and go to state 22
    STRING_K        shift and go to state 23

    VAR_DECL                       shift and go to state 24
    TYPE                           shift and go to state 25

state 17

    (3) BLOCK -> VAR_BLOCK PROC_BLOCK PRINCIPAL_BLOCK .

    $end            reduce using rule 3 (BLOCK -> VAR_BLOCK PROC_BLOCK PRINCIPAL_BLOCK .)


state 18

    (126) PRINCIPAL_BLOCK -> MAIN_K . MAIN_NEURAL LPAREN RPAREN BLOCKSTART PRINCIPAL_BODY BLOCKEND
    (127) MAIN_NEURAL -> . EMPTY
    (131) EMPTY -> .

    LPAREN          reduce using rule 131 (EMPTY -> .)

    MAIN_NEURAL                    shift and go to state 26
    EMPTY                          shift and go to state 27

state 19

    (21) PROC_DECL_RETURN -> FUNCTION_K TYPE . ID neural_proc_return_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY RETURN BLOCKEND POST_FUNC PROC_DECL

    ID              shift and go to state 28


state 20

    (19) PROC_DECL_VOID -> FUNCTION_K VOID_K . ID neural_proc_void_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY BLOCKEND POST_FUNC PROC_DECL

    ID              shift and go to state 29


state 21

    (11) TYPE -> INT_K . NEURAL_TYPE
    (14) NEURAL_TYPE -> . EMPTY
    (131) EMPTY -> .

    ID              reduce using rule 131 (EMPTY -> .)
    COLON           reduce using rule 131 (EMPTY -> .)

    NEURAL_TYPE                    shift and go to state 30
    EMPTY                          shift and go to state 31

state 22

    (12) TYPE -> FLOAT_K . NEURAL_TYPE
    (14) NEURAL_TYPE -> . EMPTY
    (131) EMPTY -> .

    ID              reduce using rule 131 (EMPTY -> .)
    COLON           reduce using rule 131 (EMPTY -> .)

    NEURAL_TYPE                    shift and go to state 32
    EMPTY                          shift and go to state 31

state 23

    (13) TYPE -> STRING_K . NEURAL_TYPE
    (14) NEURAL_TYPE -> . EMPTY
    (131) EMPTY -> .

    ID              reduce using rule 131 (EMPTY -> .)
    COLON           reduce using rule 131 (EMPTY -> .)

    NEURAL_TYPE                    shift and go to state 33
    EMPTY                          shift and go to state 31

state 24

    (4) VAR_BLOCK -> VARS_K BLOCKSTART VAR_DECL . BLOCKEND

    BLOCKEND        shift and go to state 34


state 25

    (5) VAR_DECL -> TYPE . COLON VAR_LIST SEMICOLON VAR_DECL_R

    COLON           shift and go to state 35


state 26

    (126) PRINCIPAL_BLOCK -> MAIN_K MAIN_NEURAL . LPAREN RPAREN BLOCKSTART PRINCIPAL_BODY BLOCKEND

    LPAREN          shift and go to state 36


state 27

    (127) MAIN_NEURAL -> EMPTY .

    LPAREN          reduce using rule 127 (MAIN_NEURAL -> EMPTY .)


state 28

    (21) PROC_DECL_RETURN -> FUNCTION_K TYPE ID . neural_proc_return_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY RETURN BLOCKEND POST_FUNC PROC_DECL
    (23) neural_proc_return_id -> . EMPTY
    (131) EMPTY -> .

    LPAREN          reduce using rule 131 (EMPTY -> .)

    neural_proc_return_id          shift and go to state 37
    EMPTY                          shift and go to state 38

state 29

    (19) PROC_DECL_VOID -> FUNCTION_K VOID_K ID . neural_proc_void_id LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY BLOCKEND POST_FUNC PROC_DECL
    (20) neural_proc_void_id -> . EMPTY
    (131) EMPTY -> .

    LPAREN          reduce using rule 131 (EMPTY -> .)

    neural_proc_void_id            shift and go to state 39
    EMPTY                          shift and go to state 40

state 30

    (11) TYPE -> INT_K NEURAL_TYPE .

    ID              reduce using rule 11 (TYPE -> INT_K NEURAL_TYPE .)
    COLON           reduce using rule 11 (TYPE -> INT_K NEURAL_TYPE .)


state 31

    (14) NEURAL_TYPE -> EMPTY .

    ID              reduce using rule 14 (NEURAL_TYPE -> EMPTY .)
    COLON           reduce using rule 14 (NEURAL_TYPE -> EMPTY .)


state 32

    (12) TYPE -> FLOAT_K NEURAL_TYPE .

    ID              reduce using rule 12 (TYPE -> FLOAT_K NEURAL_TYPE .)
    COLON           reduce using rule 12 (TYPE -> FLOAT_K NEURAL_TYPE .)


state 33

    (13) TYPE -> STRING_K NEURAL_TYPE .

    ID              reduce using rule 13 (TYPE -> STRING_K NEURAL_TYPE .)
    COLON           reduce using rule 13 (TYPE -> STRING_K NEURAL_TYPE .)


state 34

    (4) VAR_BLOCK -> VARS_K BLOCKSTART VAR_DECL BLOCKEND .

    FUNCTION_K      reduce using rule 4 (VAR_BLOCK -> VARS_K BLOCKSTART VAR_DECL BLOCKEND .)
    MAIN_K          reduce using rule 4 (VAR_BLOCK -> VARS_K BLOCKSTART VAR_DECL BLOCKEND .)


state 35

    (5) VAR_DECL -> TYPE COLON . VAR_LIST SEMICOLON VAR_DECL_R
    (8) VAR_LIST -> . ID VAR_LIST2

    ID              shift and go to state 42

    VAR_LIST                       shift and go to state 41

state 36

    (126) PRINCIPAL_BLOCK -> MAIN_K MAIN_NEURAL LPAREN . RPAREN BLOCKSTART PRINCIPAL_BODY BLOCKEND

    RPAREN          shift and go to state 43


state 37

    (21) PROC_DECL_RETURN -> FUNCTION_K TYPE ID neural_proc_return_id . LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY RETURN BLOCKEND POST_FUNC PROC_DECL

    LPAREN          shift and go to state 44


state 38

    (23) neural_proc_return_id -> EMPTY .

    LPAREN          reduce using rule 23 (neural_proc_return_id -> EMPTY .)


state 39

    (19) PROC_DECL_VOID -> FUNCTION_K VOID_K ID neural_proc_void_id . LPAREN PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY BLOCKEND POST_FUNC PROC_DECL

    LPAREN          shift and go to state 45


state 40

    (20) neural_proc_void_id -> EMPTY .

    LPAREN          reduce using rule 20 (neural_proc_void_id -> EMPTY .)


state 41

    (5) VAR_DECL -> TYPE COLON VAR_LIST . SEMICOLON VAR_DECL_R

    SEMICOLON       shift and go to state 46


state 42

    (8) VAR_LIST -> ID . VAR_LIST2
    (9) VAR_LIST2 -> . COMMA ID VAR_LIST2
    (10) VAR_LIST2 -> . EMPTY
    (131) EMPTY -> .

    COMMA           shift and go to state 48
    SEMICOLON       reduce using rule 131 (EMPTY -> .)

    VAR_LIST2                      shift and go to state 47
    EMPTY                          shift and go to state 49

state 43

    (126) PRINCIPAL_BLOCK -> MAIN_K MAIN_NEURAL LPAREN RPAREN . BLOCKSTART PRINCIPAL_BODY BLOCKEND

    BLOCKSTART      shift and go to state 50


state 44

    (21) PROC_DECL_RETURN -> FUNCTION_K TYPE ID neural_proc_return_id LPAREN . PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY RETURN BLOCKEND POST_FUNC PROC_DECL
    (25) PARAM_DECL -> . TYPE ID neuro PARAM_DECL_R
    (26) PARAM_DECL -> . EMPTY
    (11) TYPE -> . INT_K NEURAL_TYPE
    (12) TYPE -> . FLOAT_K NEURAL_TYPE
    (13) TYPE -> . STRING_K NEURAL_TYPE
    (131) EMPTY -> .

    INT_K           shift and go to state 21
    FLOAT_K         shift and go to state 22
    STRING_K        shift and go to state 23
    RPAREN          reduce using rule 131 (EMPTY -> .)

    TYPE                           shift and go to state 51
    PARAM_DECL                     shift and go to state 52
    EMPTY                          shift and go to state 53

state 45

    (19) PROC_DECL_VOID -> FUNCTION_K VOID_K ID neural_proc_void_id LPAREN . PARAM_DECL RPAREN neural_param_decl BLOCKSTART FN_VARBLOCK PROC_BODY BLOCKEND POST_FUNC PROC_DECL
    (25) PARAM_DECL -> . TYPE ID neuro PARAM_DECL_R
    (26) PARAM_DECL -> . EMPTY
    (11) TYPE -> . INT_K NEURAL_TYPE
    (12) TYPE -> . FLOAT_K NEURAL_TYPE
    (13) TYPE -> . STRING_K NEURAL_TYPE
    (131) EMPTY -> .

    INT_K           shift and go to state 21
    FLOAT_K         shift and go to state 22
    STRING_K        shift and go to state 23
    RPAREN          reduce using rule 131 (EMPTY -> .)

    PARAM_DECL                     shift and go to state 54
    TYPE                           shift and go to state 51
    EMPTY                          shift and go to state 53

state 46

    (5) VAR_DECL -> TYPE COLON VAR_LIST SEMICOLON . VAR_DECL_R
    (6) VAR_DECL_R -> . VAR_DECL
    (7) VAR_DECL_R -> . EMPTY
    (5) VAR_DECL -> . TYPE COLON VAR_LIST SEMICOLON VAR_DECL_R
    (131) EMPTY -> .
    (11) TYPE -> . INT_K NEURAL_TYPE
    (12) TYPE -> . FLOAT_K NEURAL_TYPE
    (13) TYPE -> . STRING_K NEURAL_TYPE

    BLOCKEND        reduce using rule 131 (EMPTY -> .)
    INT_K           shift and go to state 21
    FLOAT_K         shift and go to state 22
    STRING_K        shift and go to state 23

    TYPE                           shift and go to state 25
    VAR_DECL_R                     shift and go to state 55
    VAR_DECL                       shift and go to state 56
    EMPTY                          shift and go to state 57

state 47

    (8) VAR_LIST -> ID VAR_LIST2 .

    SEMICOLON       reduce using rule 8 (VAR_LIST -> ID VAR_LIST2 .)


state 48

    (9) VAR_LIST2 -> COMMA . ID VAR_LIST2

    ID              shift and go to state 58


state 49

    (10) VAR_LIST2 -> EMPTY .

    SEMICOLON       reduce using rule 10 (VAR_LIST2 -> EMPTY .)


state 50

    (126) PRINCIPAL_BLOCK -> MAIN_K MAIN_NEURAL LPAREN RPAREN BLOCKSTART . PRINCIPAL_BODY BLOCKEND
    (128) PRINCIPAL_BODY -> . STATEMENT PRINCIPAL_BODY_R
    (129) PRINCIPAL_BODY -> . EMPTY
    (40) STATEMENT -> . ASSIGN SEMICOLON
    (41) STATEMENT -> . FUNC_CALL SEMICOLON
    (42) STATEMENT -> . READ SEMICOLON
    (43) STATEMENT -> . WRITE SEMICOLON
    (44) STATEMENT -> . FLOW
    (131) EMPTY -> .
    (67) ASSIGN -> . VAR ASSIGN_VAR_N EQUALS EQUALS_NEURAL H_EXPRESSION ASSI_H_EXP_NEURAL
    (74) FUNC_CALL -> . ID PRE_VERIFY LPAREN EXP_LIST POST_VERIFY RPAREN
    (84) READ -> . READ_K LPAREN ID_LIST RPAREN
    (89) WRITE -> . WRITE_K LPAREN WRITE_LIST RPAREN
    (47) FLOW -> . DECISION
    (48) FLOW -> . LOOP
    (71) VAR -> . ID
    (72) VAR -> . ARRAY
    (60) DECISION -> . IF_K LPAREN H_EXPRESSION RPAREN EXP_RESULT_NEURAL BLOCKSTART STATEMENT_R BLOCKEND DECISION_ALT DECISION_END_NEURAL
    (49) LOOP -> . WHILE_LOOP
    (50) LOOP -> . DO_WHILE_LOOP SEMICOLON
    (51) LOOP -> . FOR_LOOP
    (73) ARRAY -> . ID LBRACE INT RBRACE
    (55) WHILE_LOOP -> . WHILE_K WHILE_PREV_NEURAL LPAREN H_EXPRESSION RPAREN WHILE_POST_NEURAL BLOCKSTART STATEMENT_R BLOCKEND WHILE_END_NEURAL
    (52) DO_WHILE_LOOP -> . DO_K DW_PREV_NEURAL BLOCKSTART STATEMENT_R BLOCKEND WHILE_K LPAREN H_EXPRESSION RPAREN DW_END_NEURAL
    (59) FOR_LOOP -> . FOR_K ID EQUALS INT TO_K INT DO_K BLOCKSTART STATEMENT_R BLOCKEND

    BLOCKEND        reduce using rule 131 (EMPTY -> .)
    ID              shift and go to state 68
    READ_K          shift and go to state 69
    WRITE_K         shift and go to state 70
    IF_K            shift and go to state 74
    WHILE_K         shift and go to state 78
    DO_K            shift and go to state 79
    FOR_K           shift and go to state 80
